--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -181,4 +181,47 @@ input[type="submit"] {
   width: 100%;
 }
 
+.magazine {
+  background-color: white;
+}
+
+.magazine h2,
+.editors-pick h2
+ {
+  font: bold 16px/16px "Roboto Condensed", sans-serif;
+}
+
+.magazine p {
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.mag-cat {
+  color: white;
+}
+
+.magazine h4 {
+  font-size: 14px;
+  font-weight: 900;
+}
+
+.editors-pick {
+  background-color: white;
+  }
+
+.editors-pick h4 {
+  font-size: 17px;
+  font-weight: 900;
+}
+
+.u-s {
+  background-color: white;
+}
+
+.u-s h2 {
+  color: rgb(247, 34, 16);
+  font-weight: 700;
+  font-size: 18px
+}
 
