--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -35,6 +35,7 @@ nav a {
   color: black;
   font-weight: bold;
 }
+
 nav input {
   width: 200px;
 }
@@ -44,6 +45,7 @@ article {
   width: 100%;
   background-color: white;
 }
+
 article img {
   width: 6000px;
 }
@@ -51,6 +53,12 @@ article img {
 article h3 {
   font-weight: bold;
   font-size: 21px;
+}
+
+article h2 {
+  color: rgba(3, 3, 3, 0.4);
+  font: bold 16px/16px "Roboto Condensed", sans-serif;
+  text-transform: uppercase;
 }
 
 article p {
